# Lume

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml  installers.yml  smoke.yml
docs/: ARCHITECTURE.md  FRONTEND.md  PRIVACY.md  PRODUCT.md  external-plugin.example.json
docs/qa/: ui-findings.md
extensions/chromium/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
extensions/vscode/: .vscodeignore  README.md  extension.js  package.json
scripts/: package-vscode.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: lume-vscode.vsix
src-tauri/src/: adapters.rs  agent_plugins.rs  browser_server.rs  codex_bridge.rs  codex_sessions.rs  discovery.rs  domain.rs  event_server.rs  executables.rs  integrations.rs  launcher.rs  lib.rs  main.rs  overlay.rs  state.rs  store.rs  terminal_windows.rs
src/lib/: BrandIcon.svelte  LumeLogo.svelte  LumeMascot.svelte  TerminalWindow.svelte  demo.ts  domain.ts  i18n.ts  lume.ts
src/routes/: +page.svelte
